@@ -26,7 +26,7 @@ struct diff_state {
 enum request diff_common_edit(struct view *view, enum request request, struct line *line);
 bool diff_common_read(struct view *view, const char *data, struct diff_state *state);
 enum request diff_common_enter(struct view *view, enum request request, struct line *line);
-bool diff_common_add_diff_stat(struct view *view, const char *data);
+struct line *diff_common_add_diff_stat(struct view *view, const char *text, size_t offset);
 
 unsigned int diff_get_lineno(struct view *view, struct line *line);
 const char *diff_get_pathname(struct view *view, struct line *line);
