@@ -19,7 +19,7 @@
 bool pager_column_init(struct view *view);
 bool pager_get_column_data(struct view *view, const struct line *line, struct view_column_data *column_data);
 bool pager_read(struct view *view, char *data);
-bool pager_common_read(struct view *view, const char *data, enum line_type type);
+bool pager_common_read(struct view *view, const char *data, enum line_type type, struct line **line);
 enum request pager_request(struct view *view, enum request request, struct line *line);
 void pager_select(struct view *view, struct line *line);
 
