@@ -397,7 +397,7 @@ draw_graph(struct view *view, const struct graph_canvas *canvas)
 static bool
 draw_diff_stat_part(struct view *view, enum line_type *type, const char **text, char c, enum line_type next_type)
 {
-	const char *sep = strchr(*text, c);
+	const char *sep = c == '|' ? strrchr(*text, c) : strchr(*text, c);
 
 	if (sep != NULL) {
 		draw_text_expanded(view, *type, *text, sep - *text, FALSE);
@@ -507,6 +507,14 @@ view_column_draw(struct view *view, struct line *line, unsigned int lineno)
 
 			if (line->wrapped && draw_text(view, LINE_DELIMITER, "+"))
 				return TRUE;
+
+			if (line->graph_indent) {
+				size_t indent = get_graph_indent(text);
+
+				if (draw_text_expanded(view, LINE_DEFAULT, text, indent, FALSE))
+					return TRUE;
+				text += indent;
+			}
 			if (type == LINE_DIFF_STAT)
 				draw_diff_stat(view, &type, &text);
 			if (line->commit_title) {
