@@ -23,11 +23,21 @@ struct log_state {
 	 * commit, for example when the user scrolls up or uses the page
 	 * up/down in the log view. */
 	int last_lineno;
+	size_t graph_indent;
 	enum line_type last_type;
 	bool commit_title_read;
 	bool after_commit_header;
 	bool reading_diff_stat;
 };
+
+static inline void
+log_copy_rev(struct view *view, struct line *line)
+{
+	const char *text = line->data;
+	size_t offset = get_graph_indent(text);
+
+	string_copy_rev_from_commit_line(view->ref, text + offset);
+}
 
 static void
 log_select(struct view *view, struct line *line)
@@ -37,15 +47,14 @@ log_select(struct view *view, struct line *line)
 
 	if (!last_lineno || abs(last_lineno - line->lineno) > 1
 	    || (state->last_type == LINE_COMMIT && last_lineno > line->lineno)) {
-		const struct line *commit_line = find_prev_line_by_type(view, line, LINE_COMMIT);
+		struct line *commit_line = find_prev_line_by_type(view, line, LINE_COMMIT);
 
 		if (commit_line)
-			string_copy_rev_from_commit_line(view->ref, commit_line->data);
+			log_copy_rev(view, commit_line);
 	}
 
-	if (line->type == LINE_COMMIT && !view_has_flags(view, VIEW_NO_REF)) {
-		string_copy_rev_from_commit_line(view->ref, (char *)line->data);
-	}
+	if (line->type == LINE_COMMIT && !view_has_flags(view, VIEW_NO_REF))
+		log_copy_rev(view, line);
 	string_copy_rev(view->env->commit, view->ref);
 	state->last_lineno = line->lineno;
 	state->last_type = line->type;
@@ -87,15 +96,21 @@ log_request(struct view *view, enum request request, struct line *line)
 static bool
 log_read(struct view *view, char *data)
 {
+	struct line *line = NULL;
 	enum line_type type;
 	struct log_state *state = view->private;
 	size_t len;
+	char *commit;
 
 	if (!data)
 		return TRUE;
 
-	type = get_line_type(data);
-	len = strlen(data);
+	commit = strstr(data, "commit ");
+	if (commit && get_graph_indent(data) == commit - data)
+		state->graph_indent = commit - data;
+
+	type = get_line_type(data + state->graph_indent);
+	len = strlen(data + state->graph_indent);
 
 	if (type == LINE_COMMIT)
 		state->commit_title_read = TRUE;
@@ -106,12 +121,20 @@ log_read(struct view *view, char *data)
 		state->after_commit_header = FALSE;
 		state->reading_diff_stat = TRUE;
 	} else if (state->reading_diff_stat) {
-		if (diff_common_add_diff_stat(view, data))
+		line = diff_common_add_diff_stat(view, data, state->graph_indent);
+		if (line) {
+			if (state->graph_indent)
+				line->graph_indent = 1;
 			return TRUE;
+		}
 		state->reading_diff_stat = FALSE;
 	}
 
-	return pager_common_read(view, data, type);
+	if (!pager_common_read(view, data, type, &line))
+		return FALSE;
+	if (line && state->graph_indent)
+		line->graph_indent = 1;
+	return TRUE;
 }
 
 static struct view_ops log_ops = {
