@@ -481,7 +481,7 @@ stage_read(struct view *view, char *data)
 	struct stage_state *state = view->private;
 
 	if (stage_line_type == LINE_STAT_UNTRACKED)
-		return pager_common_read(view, data, LINE_DEFAULT);
+		return pager_common_read(view, data, LINE_DEFAULT, NULL);
 
 	if (data && diff_common_read(view, data, &state->diff))
 		return TRUE;
