@@ -71,6 +71,7 @@ Improvements:
  - Rename 'branch' view to 'refs' view and show tags. (GH #134)
  - Add completion and history support to the prompt via readline. (GH #185)
  - Options can be toggled individually for each view. (GH #89)
+ - Add support for `--graph` and highlight diff stats in the log view.
 
 Bug fixes:
 
